THRIFT-5519 Java async client loses exceptions in void methods Client: java

(cherry picked from commit c4d3e36ed4db97fb6213cc13a4e611a4e658b4b7)